update : sonarLint error fixed